--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,7 @@ body {
 ul {
   margin: 0;
   padding: 0;
+  list-style-type: none;
 }
 p,
 h1,
@@ -189,7 +190,6 @@ img {
 }
 .team-name {
   padding-top: 32px;
-  padding-bottom: 32px;
   align-items: center;
 }
 .team-name h3 {
@@ -227,7 +227,7 @@ img {
   background: var(--light-mode-cloud);
   padding-bottom: 120px;
 }
-.team li {
+.team-img {
   background: var(--background-color-white);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -237,6 +237,36 @@ img {
   display: flex;
   gap: 24px;
   flex-basis: calc((100% - 3 * 24px) / 4);
+}
+.socials-list{
+display: flex;
+gap: 24px;
+margin-top: 8px;
+padding-bottom: 32px;
+justify-content: center;
+}
+.socials-icon{
+  width: 16px;
+  height: 16px;
+  fill: var(--light-mode-cloud);
+}
+
+.socials-item{
+  width: 44px;
+  height: 44px;  
+}
+.socials-link{
+display: flex;
+background-color: var(--primary-brand-iris);
+border-radius: 50%;
+width: 100%;
+height: 100%;
+justify-content: center;
+align-items: center;
+}
+.socials-link:focus,
+.socials-link:hover {
+  background-color: var(--pressed-state-ocean);
 }
 /*index end*/
 
