--- a/css/styles.css
+++ b/css/styles.css
@@ -345,6 +345,10 @@ align-items: center;
   background-color: var(--dark-navy-blue);
   padding: 100px 0;
 }
+.footer-container{
+display: flex;
+gap: 120px;
+}
 .footer-text {
   color: var(--accent-cornflower);
   line-height: 1.5;
@@ -357,7 +361,47 @@ align-items: center;
 .footer-content {
   display: inline-block;
 }
+.footer-content h2{
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+  color: var(--text-color-white);
+  margin-bottom: 16px;
+}
 .footer-logo {
   color: var(--light-mode-cloud);
   line-height: 1.16;
+}
+.footer-socials-list {
+  display: flex;
+  gap: 16px;
+  margin-top: 8px;
+  padding-bottom: 30px;
+  justify-content: center;
+}
+
+.footer-socials-icon {
+  width: 24px;
+  height: 24px;
+  fill: var(--light-mode-cloud);
+}
+
+.footer-socials-item {
+  width: 40px;
+  height: 40px;
+}
+
+.footer-socials-link {
+  display: flex;
+  background-color: transparent ;
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-socials-link:focus,
+.footer-socials-link:hover {
+  background-color: var(--succes-green);
 }
