--- a/css/styles.css
+++ b/css/styles.css
@@ -148,8 +148,6 @@ img {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
   cursor: pointer;
   display: block;
   text-align: center;
@@ -252,8 +250,8 @@ justify-content: center;
 }
 
 .socials-item{
-  width: 44px;
-  height: 44px;  
+  width: 40px;
+  height: 40px;  
 }
 .socials-link{
 display: flex;
@@ -393,7 +391,7 @@ gap: 120px;
 
 .footer-socials-link {
   display: flex;
-  background-color: transparent ;
+  background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
   width: 100%;
   height: 100%;
