--- a/css/styles.css
+++ b/css/styles.css
@@ -286,6 +286,8 @@ img {
 .portfolio-button:focus {
   color: var(--text-color-white);
   background-color: var(--pressed-state-ocean);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
 .portfolio-nav li {
   list-style-type: none;
@@ -337,6 +339,10 @@ img {
   margin-left: 24px;
   margin-top: 48px;
 }
+.portfolio-img:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
 
 /*common*/
 .footer {
