--- a/css/styles.css
+++ b/css/styles.css
@@ -197,7 +197,8 @@ img {
   margin-bottom: 0;
 }
 .services h2,
-.team h2 {
+.team h2,
+.customers h2 {
   color: var(--dark-navy-blue);
   font-size: 36px;
   line-height: 1.11;
