--- a/css/styles.css
+++ b/css/styles.css
@@ -124,7 +124,16 @@ img {
 /*common end*/
 /*index*/
 .hero {
-  background-color: var(--overlay-navy-blue-modal);
+  background-color: var(--dark-navy-blue);
+  background-image: linear-gradient(
+    0deg,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)),
+      url("../images/hero-bg.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  max-width: 1440px;
   padding: 188px 0;
   margin-left: auto;
   margin-right: auto;
@@ -163,6 +172,19 @@ img {
   display: flex;
   gap: 24px;
 }
+.advantages-icon{
+  width: 64px;
+  height: 64px;
+ }
+ /*fixed
+ .advantages-item {
+  width: 264px;
+  height: 112px;
+  background-color: var(--light-mode-cloud);
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 8px;
+ }*/
 .advantages-list h3 {
   color: var(--dark-navy-blue);
   font-weight: 500;
@@ -175,10 +197,7 @@ img {
   list-style-type: none;
   flex-basis: calc((100% - 3 * 24px) / 4);
 }
-.services-list > li,
-.team-list {
-  list-style-type: none;
-}
+
 .services-list {
   display: flex;
   max-width: 100%;
@@ -249,7 +268,6 @@ img {
   height: 16px;
   fill: var(--light-mode-cloud);
 }
-
 .socials-item {
   width: 40px;
   height: 40px;
@@ -268,17 +286,16 @@ img {
   background-color: var(--pressed-state-ocean);
 }
 
-.customers-list{
+.customers-list {
   display: flex;
   gap: 24px;
   flex-basis: calc((100% - 5 * 24px) / 6);
   padding-bottom: 120px;
   justify-content: center;
 }
-.customers-icon{
+.customers-icon {
   width: 94px;
   height: 44px;
-  
 }
 .customers-item {
   width: 168px;
@@ -295,9 +312,9 @@ img {
   align-items: center;
 }
 .customers-link:hover,
-.customers-link:focus{
-fill: var(--pressed-state-ocean);
-border: 1px solid var(--pressed-state-ocean);
+.customers-link:focus {
+  fill: var(--pressed-state-ocean);
+  border: 1px solid var(--pressed-state-ocean);
 }
 
 /*index end*/
@@ -320,7 +337,8 @@ border: 1px solid var(--pressed-state-ocean);
 .portfolio-button:focus {
   color: var(--text-color-white);
   background-color: var(--pressed-state-ocean);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
 }
 .portfolio-nav li {
@@ -374,9 +392,9 @@ border: 1px solid var(--pressed-state-ocean);
   margin-top: 48px;
 }
 .portfolio-img:hover {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
-
 
 /*common*/
 .footer {
