--- a/css/styles.css
+++ b/css/styles.css
@@ -126,10 +126,11 @@ img {
 .hero {
   background-color: var(--dark-navy-blue);
   background-image: linear-gradient(
-    0deg,
+      0deg,
       rgba(46, 47, 66, 0.7),
-      rgba(46, 47, 66, 0.7)),
-      url("../images/hero-bg.jpg");
+      rgba(46, 47, 66, 0.7)
+    ),
+    url('../images/hero-bg.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -174,19 +175,19 @@ img {
   display: flex;
   gap: 24px;
 }
-.advantages-icon{
+.advantages-icon {
   width: 64px;
   height: 64px;
- }
- /*fixed
- .advantages-item {
+}
+ .advantages-block {
+  display: flex;
   width: 264px;
   height: 112px;
   background-color: var(--light-mode-cloud);
   justify-content: center;
   align-items: center;
   margin-bottom: 8px;
- }*/
+ }
 .advantages-list h3 {
   color: var(--dark-navy-blue);
   font-weight: 500;
