--- a/css/styles.css
+++ b/css/styles.css
@@ -153,7 +153,7 @@ img {
 .button-hero {
   color: var(--text-color-white);
   background-color: var(--primary-brand-iris);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: none;
   border-radius: 4px;
   font-family: inherit;
   font-weight: 500;
